fixed horizontal scrolling bug

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -76,7 +76,8 @@
 }
 
 @media screen and (max-width: 960px) {
-  html {
+  html,
+  body {
     max-width: 100%;
     overflow-x: hidden;
   }
@@ -88,8 +89,8 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    width: 0px;
+    height: 0px;
     position: absolute;
     top: 80px;
     left: 200%;
@@ -98,6 +99,8 @@
   }
 
   .nav-menu.active {
+    width: 100%;
+    height: 100vh;
     background: #004b9e;
     left: 0;
     opacity: 1;
